--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@ return (Math.abs(a * b)/NOD(a, b));
             </a>
         </div>
     </div>
+    <script src="https://alexei-zapivon.github.io/script.javascript"></script>
 </body>
-<script src="/js/script.js"></script>
 </html>
