--- a/index.html
+++ b/index.html
@@ -94,5 +94,5 @@ return (Math.abs(a * b)/NOD(a, b));
         </div>
     </div>
 </body>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </html>
