--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ return (Math.abs(a * b)/NOD(a, b));
             <p>
                 Проверить как освоен материал?
             </p>
-            <a href="/question.html">
+            <a href="question.html">
                 <button class="calculate-button">Пройти тест</button>
             </a>
         </div>
