--- a/question.html
+++ b/question.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euclidean Algorithm</title>
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
         <div id="result"></div>
     </div>
 
-    <script src="/js/quer.js"></script>
+    <script src="js/quer.js"></script>
 </body>
 
 </html>
