--- a/question.html
+++ b/question.html
@@ -14,34 +14,82 @@
     <div id="test">
         <div class="question" id="question1">
             <h2>Вопрос 1:</h2>
-            <p>Что такое HTML?</p>
-            <label><input type="radio" name="q1" value="a"> Язык программирования</label>
-            <label><input type="radio" name="q1" value="b"> Гипертекстовая разметка</label>
-            <label><input type="radio" name="q1" value="c"> Графический редактор</label>
+            <p>Что из перечисленного лучше всего описывает алгоритм Евклида?</p>
+            <label><input type="radio" name="q1" value="a"> Метод для нахождения корней уравнений</label>
+            <label><input type="radio" name="q1" value="b"> Алгоритм для нахождения наименьшего общего делителя</label>
+            <label><input type="radio" name="q1" value="c"> Техника для сортировки массивов</label>
         </div>
 
         <div class="question" id="question2">
             <h2>Вопрос 2:</h2>
-            <p>Какие теги используются для создания таблицы в HTML?</p>
-            <label><input type="checkbox" name="q2" value="a"> &lt;table&gt;</label>
-            <label><input type="checkbox" name="q2" value="b"> &lt;tr&gt;</label>
-            <label><input type="checkbox" name="q2" value="c"> &lt;td&gt;</label>
+            <p>Каким образом алгоритм Евклида используется?</p>
+            <label><input type="checkbox" name="q2" value="a"> Для шифрования сообщений</label>
+            <label><input type="checkbox" name="q2" value="b"> Для поиска простых чисел</label>
+            <label><input type="checkbox" name="q2" value="c"> Для нахождения наименьшего общего делителя</label>
         </div>
 
         <div class="question" id="question3">
             <h2>Вопрос 3:</h2>
-            <p>Что такое HTML?</p>
-            <label><input type="radio" name="q3" value="a"> Язык программирования</label>
-            <label><input type="radio" name="q3" value="b"> Гипертекстовая разметка</label>
-            <label><input type="radio" name="q3" value="c"> Графический редактор</label>
+            <p>Что является входными данными для алгоритма Евклида?</p>
+            <label><input type="radio" name="q3" value="a"> Два цвета</label>
+            <label><input type="radio" name="q3" value="b"> Два угла</label>
+            <label><input type="radio" name="q3" value="c"> Два целых числа</label>
         </div>
 
         <div class="question" id="question4">
             <h2>Вопрос 4:</h2>
-            <p>Какие теги используются для создания таблицы в HTML?</p>
-            <label><input type="checkbox" name="q4" value="a"> &lt;table&gt;</label>
-            <label><input type="checkbox" name="q4" value="b"> &lt;tr&gt;</label>
-            <label><input type="checkbox" name="q4" value="c"> &lt;td&gt;</label>
+            <p>Какова цель алгоритма Евклида?</p>
+            <label><input type="checkbox" name="q4" value="a"> Найти сумму двух чисел</label>
+            <label><input type="checkbox" name="q4" value="b"> Найти разность двух чисел</label>
+            <label><input type="checkbox" name="q4" value="c"> Найти наименьший общий делитель двух чисел</label>
+        </div>
+
+        <div class="question" id="question4">
+            <h2>Вопрос 5:</h2>
+            <p>Какие операции выполняет алгоритм Евклида?</p>
+            <label><input type="checkbox" name="q4" value="a"> Сложение и вычитание</label>
+            <label><input type="checkbox" name="q4" value="b"> Умножение и деление</label>
+            <label><input type="checkbox" name="q4" value="c"> Деление с остатком</label>
+        </div>
+
+        <div class="question" id="question4">
+            <h2>Вопрос 6:</h2>
+            <p>Какова асимптотическая сложность алгоритма Евклида?</p>
+            <label><input type="checkbox" name="q4" value="a"> O(log n)</label>
+            <label><input type="checkbox" name="q4" value="b"> O(n)</label>
+            <label><input type="checkbox" name="q4" value="c"> O(n^2)</label>
+        </div>
+
+        <div class="question" id="question4">
+            <h2>Вопрос 7:</h2>
+            <p>Каким образом алгоритм Евклида может быть расширен до расширенного алгоритма Евклида?</p>
+            <label><input type="checkbox" name="q4" value="a"> Добавлением умножения и деления</label>
+            <label><input type="checkbox" name="q4" value="b"> Добавлением сложения и вычитания</label>
+            <label><input type="checkbox" name="q4" value="c"> Добавлением нахождения обратного элемента</label>
+        </div>
+
+        <div class="question" id="question4">
+            <h2>Вопрос 8:</h2>
+            <p>Какие типы данных могут быть обработаны алгоритмом Евклида?</p>
+            <label><input type="checkbox" name="q4" value="a"> Только целые числа</label>
+            <label><input type="checkbox" name="q4" value="b"> Только дробные числа</label>
+            <label><input type="checkbox" name="q4" value="c"> Любые числа, поддерживающие деление с остатком</label>
+        </div>
+
+        <div class="question" id="question4">
+            <h2>Вопрос 9:</h2>
+            <p>Какой результат дает алгоритм Евклида для взаимно простых чисел?</p>
+            <label><input type="checkbox" name="q4" value="a"> 0</label>
+            <label><input type="checkbox" name="q4" value="b"> 1</label>
+            <label><input type="checkbox" name="q4" value="c"> Нет определенного результата</label>
+        </div>
+
+        <div class="question" id="question4">
+            <h2>Вопрос 10:</h2>
+            <p>Какие методы могут использоваться для оптимизации алгоритма Евклида?</p>
+            <label><input type="checkbox" name="q4" value="a"> Перебор делителей</label>
+            <label><input type="checkbox" name="q4" value="b"> Использование таблицы умножения</label>
+            <label><input type="checkbox" name="q4" value="c"> Оптимизация поиска обратного элемента</label>
         </div>
 
         <button id="nextButton" onclick="nextQuestion()">Далее</button>
