--- a/question.html
+++ b/question.html
@@ -23,9 +23,9 @@
         <div class="question" id="question2">
             <h2>Вопрос 2:</h2>
             <p>Каким образом алгоритм Евклида используется?</p>
-            <label><input type="checkbox" name="q2" value="a"> Для шифрования сообщений</label>
-            <label><input type="checkbox" name="q2" value="b"> Для поиска простых чисел</label>
-            <label><input type="checkbox" name="q2" value="c"> Для нахождения наименьшего общего делителя</label>
+            <label><input type="radio" name="q2" value="a"> Для шифрования сообщений</label>
+            <label><input type="radio" name="q2" value="b"> Для поиска простых чисел</label>
+            <label><input type="radio" name="q2" value="c"> Для нахождения наименьшего общего делителя</label>
         </div>
 
         <div class="question" id="question3">
@@ -39,57 +39,57 @@
         <div class="question" id="question4">
             <h2>Вопрос 4:</h2>
             <p>Какова цель алгоритма Евклида?</p>
-            <label><input type="checkbox" name="q4" value="a"> Найти сумму двух чисел</label>
-            <label><input type="checkbox" name="q4" value="b"> Найти разность двух чисел</label>
-            <label><input type="checkbox" name="q4" value="c"> Найти наименьший общий делитель двух чисел</label>
+            <label><input type="radio" name="q4" value="a"> Найти сумму двух чисел</label>
+            <label><input type="radio" name="q4" value="b"> Найти разность двух чисел</label>
+            <label><input type="radio" name="q4" value="c"> Найти наименьший общий делитель двух чисел</label>
         </div>
 
         <div class="question" id="question4">
             <h2>Вопрос 5:</h2>
             <p>Какие операции выполняет алгоритм Евклида?</p>
-            <label><input type="checkbox" name="q4" value="a"> Сложение и вычитание</label>
-            <label><input type="checkbox" name="q4" value="b"> Умножение и деление</label>
-            <label><input type="checkbox" name="q4" value="c"> Деление с остатком</label>
+            <label><input type="radio" name="q4" value="a"> Сложение и вычитание</label>
+            <label><input type="radio" name="q4" value="b"> Умножение и деление</label>
+            <label><input type="radio" name="q4" value="c"> Деление с остатком</label>
         </div>
 
         <div class="question" id="question4">
             <h2>Вопрос 6:</h2>
             <p>Какова асимптотическая сложность алгоритма Евклида?</p>
-            <label><input type="checkbox" name="q4" value="a"> O(log n)</label>
-            <label><input type="checkbox" name="q4" value="b"> O(n)</label>
-            <label><input type="checkbox" name="q4" value="c"> O(n^2)</label>
+            <label><input type="radio" name="q4" value="a"> O(log n)</label>
+            <label><input type="radio" name="q4" value="b"> O(n)</label>
+            <label><input type="radio" name="q4" value="c"> O(n^2)</label>
         </div>
 
         <div class="question" id="question4">
             <h2>Вопрос 7:</h2>
             <p>Каким образом алгоритм Евклида может быть расширен до расширенного алгоритма Евклида?</p>
-            <label><input type="checkbox" name="q4" value="a"> Добавлением умножения и деления</label>
-            <label><input type="checkbox" name="q4" value="b"> Добавлением сложения и вычитания</label>
-            <label><input type="checkbox" name="q4" value="c"> Добавлением нахождения обратного элемента</label>
+            <label><input type="radio" name="q4" value="a"> Добавлением умножения и деления</label>
+            <label><input type="radio" name="q4" value="b"> Добавлением сложения и вычитания</label>
+            <label><input type="radio" name="q4" value="c"> Добавлением нахождения обратного элемента</label>
         </div>
 
         <div class="question" id="question4">
             <h2>Вопрос 8:</h2>
             <p>Какие типы данных могут быть обработаны алгоритмом Евклида?</p>
-            <label><input type="checkbox" name="q4" value="a"> Только целые числа</label>
-            <label><input type="checkbox" name="q4" value="b"> Только дробные числа</label>
-            <label><input type="checkbox" name="q4" value="c"> Любые числа, поддерживающие деление с остатком</label>
+            <label><input type="radio" name="q4" value="a"> Только целые числа</label>
+            <label><input type="radio" name="q4" value="b"> Только дробные числа</label>
+            <label><input type="radio" name="q4" value="c"> Любые числа, поддерживающие деление с остатком</label>
         </div>
 
         <div class="question" id="question4">
             <h2>Вопрос 9:</h2>
             <p>Какой результат дает алгоритм Евклида для взаимно простых чисел?</p>
-            <label><input type="checkbox" name="q4" value="a"> 0</label>
-            <label><input type="checkbox" name="q4" value="b"> 1</label>
-            <label><input type="checkbox" name="q4" value="c"> Нет определенного результата</label>
+            <label><input type="radio" name="q4" value="a"> 0</label>
+            <label><input type="radio" name="q4" value="b"> 1</label>
+            <label><input type="radio" name="q4" value="c"> Нет определенного результата</label>
         </div>
 
         <div class="question" id="question4">
             <h2>Вопрос 10:</h2>
             <p>Какие методы могут использоваться для оптимизации алгоритма Евклида?</p>
-            <label><input type="checkbox" name="q4" value="a"> Перебор делителей</label>
-            <label><input type="checkbox" name="q4" value="b"> Использование таблицы умножения</label>
-            <label><input type="checkbox" name="q4" value="c"> Оптимизация поиска обратного элемента</label>
+            <label><input type="radio" name="q4" value="a"> Перебор делителей</label>
+            <label><input type="radio" name="q4" value="b"> Использование таблицы умножения</label>
+            <label><input type="radio" name="q4" value="c"> Оптимизация поиска обратного элемента</label>
         </div>
 
         <button id="nextButton" onclick="nextQuestion()">Далее</button>
